# autoregressive-schemas

./: .env.example  README.md  judge_prompt.md  judge_prompt_reachability.md  pyproject.toml  repro.md
analysis/: a01_summary_stats.py  a02_paired_comparisons.py  a03_striking_pairs.py  load.py
inputs/: cases.json
results/analysis/: 01_summary_stats.csv  02_paired_nested_narrative_vs_alpha_nested_per_case.csv  02_paired_nested_narrative_vs_alpha_nested_summary.csv  02_paired_nested_narrative_vs_flat_alpha_per_case.csv  02_paired_nested_narrative_vs_flat_alpha_summary.csv  02_paired_nested_narrative_vs_ui_contract_per_case.csv  02_paired_nested_narrative_vs_ui_contract_summary.csv  05_reachability.csv  05_reachability_long.csv  06_thinking_tokens.csv  06_thinking_tokens_long.csv  flash_v1_gemini_35_flash_vs_flash_v1_gemini_3_flash_preview_paired_summary.csv  flash_v1_gemini_35_flash_vs_flash_v1_gemini_3_flash_preview_report.json  stacked_bar_chart.py
results/examples/: 1_flat.json  2_types.json  3_append.json  4_ui.json  5_alpha_nested.json  6_nested_nar.json
results/judgments/: flash_v1_gemini_35_flash_0.json  flash_v1_gemini_35_flash_1.json  flash_v1_gemini_35_flash_2.json  flash_v1_gemini_35_flash_3.json  flash_v1_gemini_35_flash_4.json  method_h1_0.json  (+201 more)
src/: __init__.py  cli.py  generate.py  normalize.py  paths.py  prompts.py  rubric.py  run.py  run_eval.py  run_flash.py  schemas.py  score.py  score_models.py  scoring.py
tests/: conftest.py  test_cli.py  test_normalize.py  test_rubric.py  test_scoring.py  test_smoke.py  test_thinking_analysis.py
(+343 files in other folders)
