[project]
name = "autoregressive-schemas"
version = "0.1.0"
description = "Case study: how field order in tool-call schemas affects small-LLM output quality"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "google-genai>=1.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "tenacity>=8.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src", "analysis"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
