[project]
name = "autoregressive-schemas"
version = "0.2.0"
description = "Case study: how field order in tool-call schemas affects small-LLM output quality"
requires-python = ">=3.12"
license = "MIT"
dependencies = [
    "click>=8.0",
    "google-genai>=1.0",
    "matplotlib>=3.0",
    "pandas>=2.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "tenacity>=8.0",
]

[project.scripts]
ars = "src.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 99
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
